# vibatchium

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml  publish.yml  test.yml
docs/: CAPABILITIES.md  OPERATIONS.md  PLAN-plugins-skills-goals-phase2.md  PLAN-plugins-skills-goals.md  STEALTH.md
patchium/: cli.py  client.py  evals.py  humanize.py  liveview.py  mcp_server.py  proxy.py  rest.py  safety.py  secrets.py  setup_cmd.py  vision.py
patchium/daemon/: __init__.py  backends.py  browser.py  elements.py  handlers.py  handlers_extra.py  observe.py  paths.py  registry.py  server.py
patchium/stealth/: __init__.py  mouse.py
scripts/: smoke.py  smoke_headed.sh
tests/: _imap_server.py  conftest.py  smoke_cloudflare.py  test_agent_forms.py  test_bench_offline.py  test_cli_goals.py  test_daemon_log_persist.py  test_daemon_singleton.py  test_elements.py  test_ephemeral_lane.py  test_extract.py  test_extract_fields.py  test_fetch.py  test_frames_storage_waits.py  test_geo.py  test_goals.py  test_goals_sse.py  test_gpu_webgl.py  test_headless_default.py  test_idle_freeze.py  test_integration_daemon.py  test_liveview_auth.py  test_log_redaction.py  test_login.py  test_map_compact.py  test_mcp_instructions.py  test_navigation.py  test_observe_profile.py  test_oracle_offline.py  test_p0_fixes.py  test_p1_extras.py  test_plugins.py  test_sdk.py  test_secret_screenshot_redaction.py  test_selfheal_renderer.py  test_session_lease.py  test_setup_cmd.py  test_skills.py  test_stealth_drift_gate.py  test_sweep_correctness.py  (+31 more)
tests/fixtures/: api-test  article.html  astate.html  blank.html  console.html  csp.html  fields.html  forms.html  iframe.html  main_sparse.html  second.html  simple.html  wall_control.html  wall_datadome.html  wall_perimeterx.html  walled.html
vibatchium/: __init__.py  bench.py  caps.py  cli.py  client.py  dom_js.py  evals.py  extract.py  fetch.py  geo.py  gpu.py  humanize.py  liveview.py  login.py  mcp_server.py  oracle.py  proxy.py  rest.py  safety.py  sdk.py  secrets.py  setup_cmd.py  tiles.py  vision.py
vibatchium/daemon/: __init__.py  backends.py  browser.py  elements.py  freeze.py  handlers.py  handlers_extra.py  lease.py  observe.py  paths.py  registry.py  server.py
vibatchium/goals/: __init__.py  allowlist.py  engine.py  events.py  handlers.py  notifiers.py  store.py
vibatchium/plugins/: __init__.py  api.py  handlers.py  registry.py
vibatchium/skills/: __init__.py  handlers.py  match.py  safety.py  store.py
vibatchium/stealth/: __init__.py  mouse.py
