[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchium"
version = "0.2.0"
description = "Patchwright stealth + Vibium-style LLM-friendly CLI for agentic browser automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ClavIclar" }]
keywords = ["browser", "automation", "ai", "agent", "patchright", "stealth", "playwright", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "patchright>=1.59.0",
    "click>=8.1.7",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# Pillow is only needed for `screenshot --annotate`.
annotate = ["pillow>=10.0"]
# Claude observe→act LLM backend (heuristic backend is always available).
llm = ["anthropic>=0.40"]
# Humanized mouse trajectories — defeats Brotector / DataDome aggressive.
# CDP-Patches has no SPDX file in its repo; pinned for vendor-and-pin safety.
stealth-mouse = ["cdp-patches @ git+https://github.com/Kaliiiiiiiiii-Vinyzu/CDP-Patches.git@main"]
# Wave 5.4: nodriver backend for the hardest Cloudflare gates. AGPL-3.0
# (copyleft); commercial integrators should consult licensing.
nodriver = ["nodriver>=0.50.0"]
# Convenience meta-extras
all = ["pillow>=10.0", "anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.3", "ruff>=0.6.0"]

[project.scripts]
patchium = "patchium.cli:main"

[project.urls]
Homepage = "https://github.com/ClavIclar/patchium"
Issues = "https://github.com/ClavIclar/patchium/issues"

[tool.hatch.metadata]
# Required because the optional `stealth-mouse` extra references CDP-Patches
# via git+https (not on PyPI). Direct references are allowed; consumers will
# need pip>=22 to install that extra.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["patchium"]

[tool.hatch.build.targets.sdist]
include = [
    "/patchium",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/tests",
    "/.github",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "tests/**/*.png",
    "tests/**/*.json",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP"]
ignore = [
    "E501",  # line too long — keep readability
    "B008",  # function call in default arg — Click idiom
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
