[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibatchium"
version = "0.5.0"
description = "Patchwright stealth + Vibium-style LLM-friendly CLI for agentic browser automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "monodev-eth" }]
keywords = ["browser", "automation", "ai", "agent", "patchright", "stealth", "playwright", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "patchright>=1.59.0",
    "click>=8.1.7",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# Pillow is only needed for `screenshot --annotate`.
annotate = ["pillow>=10.0"]
# Claude observe→act LLM backend (heuristic backend is always available).
llm = ["anthropic>=0.40"]
# Humanized mouse trajectories — defeats Brotector / DataDome aggressive.
# CDP-Patches is not on PyPI; the published wheel cannot list a git+https
# direct dependency. Users who want stealth-mouse install it separately:
#   pip install vibatchium
#   pip install git+https://github.com/Kaliiiiiiiiii-Vinyzu/CDP-Patches.git@main
# Wave 5.4: nodriver backend for the hardest Cloudflare gates. AGPL-3.0
# (copyleft); commercial integrators should consult licensing.
nodriver = ["nodriver>=0.50.0"]
# Wave 6.1a: live-view server (WebSocket frame stream + takeover). Pulls
# aiohttp for the HTTP+WS surface; ~5 MB install footprint.
liveview = ["aiohttp>=3.9"]
# Wave 6.3a: credential vault + TOTP. pynacl for XSalsa20-Poly1305 AEAD;
# keyring for OS-native key storage (gnome-keyring, macOS Keychain, etc.).
secrets = ["pynacl>=1.5", "keyring>=24.0"]
# Wave 6.4a: REST shim — exposes daemon verbs over HTTP for non-shell clients
# (Docker / hosted mode / language-agnostic agents). FastAPI + uvicorn.
rest = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
# Convenience meta-extras
# `all` = every advertised feature except GPL/AGPL extras (stealth-mouse, nodriver).
# Matches the README install guidance — keep these in sync.
all = [
    "pillow>=10.0",        # annotate
    "anthropic>=0.40",     # llm + vision
    "aiohttp>=3.9",        # liveview
    "pynacl>=1.5",         # secrets vault
    "keyring>=24.0",       # secrets vault key storage
    "fastapi>=0.110",      # rest shim
    "uvicorn[standard]>=0.27",  # rest shim
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.3", "ruff>=0.6.0"]

[project.scripts]
vb = "vibatchium.cli:main"

[project.urls]
Homepage = "https://github.com/trueoriginlabs/vibatchium"
Issues = "https://github.com/trueoriginlabs/vibatchium/issues"
Source = "https://github.com/trueoriginlabs/vibatchium"

[tool.hatch.build.targets.wheel]
packages = ["vibatchium"]

[tool.hatch.build.targets.sdist]
include = [
    "/vibatchium",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/tests",
    "/.github",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "tests/**/*.png",
    "tests/**/*.json",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP"]
ignore = [
    "E501",  # line too long — keep readability
    "B008",  # function call in default arg — Click idiom
    "E701",  # multi-statement on one line (colon) — guard-clause idiom
    "E702",  # multi-statement on one line (semicolon) — compact assigns
    "E731",  # lambda assignment — accepted for tiny inline transformers
    "E402",  # module-level import not at top — needed for opt-in deferred imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # unused locals in tests are fine (assertion of "doesn't raise")

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
